kubernetes/ingress_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: john-dashboard-ui
  name: service-react-dashboard
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: react-dashboard
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: john-dashboard-ui
  name: ingress-react-dashboard
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-react-dashboard
              servicePort: 80
